--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,10 @@
   background-color: rgb(251 206 255 / 82%);
 }
 
+#output {
+  display: none;
+}
+
 body {
   background-color: rgb(27, 22, 94);
 }
